--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "village-shopkeeper",
+  "version": "1.0.0",
+  "description": "An interactive 3D marketplace scene with a shopkeeper powered by Claude AI",
+  "scripts": {
+    "start": "./start-dev.sh",
+    "generate-env": "node generate-env-config.js"
+  },
   "dependencies": {
     "@types/three": "^0.174.0",
+    "dotenv": "^16.3.1",
     "three": "^0.174.0"
   }
 }
