--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "@anthropic-ai/sdk": "^0.39.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "openai": "^4.87.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
